Trying to fix mobile menu not being bumped down on iphone 5 screen width.

--- a/themes/hugo-theme-even/src/css/_partial/_mobile.scss
+++ b/themes/hugo-theme-even/src/css/_partial/_mobile.scss
@@ -22,11 +22,12 @@
 
   .mobile-header-logo {
     display: inline-block;
-    margin-right: 50px;
+    //margin-right: 50px;
 
     .logo {
       font-size: 22px;
       line-height: $mobile-navbar-height;
+      text-align: right;
       font-family: $logo-font-family;
     }
     .logo:hover {
